src/test/deca/context/invalid/return/return_void_in_expr_context.deca
// Description :
//    Utilisation d'un appel de méthode void dans un contexte d'expression.
//
// Resultats :
//    Erreur contextuelle
//    Ligne <No_de_ligne> : <message d'erreur de votre compilateur>

class A {
    void f() {
    }
}

{
    A a = new A();
    int x = a.f();
}

